tests/baselines/reference/orderMattersForSignatureGroupIdentity.errors.txt
tests/cases/compiler/orderMattersForSignatureGroupIdentity.ts(19,5): error TS2345: Argument of type '{ s: string; n: number; }' is not assignable to parameter of type '{ n: number; }'.
  Object literal may only specify known properties, and 's' does not exist in type '{ n: number; }'.
tests/cases/compiler/orderMattersForSignatureGroupIdentity.ts(19,20): error TS2339: Property 'toLowerCase' does not exist on type 'number'.
tests/cases/compiler/orderMattersForSignatureGroupIdentity.ts(22,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'w' must be of type 'A', but here has type 'C'.
tests/cases/compiler/orderMattersForSignatureGroupIdentity.ts(24,5): error TS2345: Argument of type '{ s: string; n: number; }' is not assignable to parameter of type '{ n: number; }'.
  Object literal may only specify known properties, and 's' does not exist in type '{ n: number; }'.
tests/cases/compiler/orderMattersForSignatureGroupIdentity.ts(24,20): error TS2339: Property 'toLowerCase' does not exist on type 'number'.


==== tests/cases/compiler/orderMattersForSignatureGroupIdentity.ts (5 errors) ====
    interface A {
        (x: { s: string }): string
        (x: { n: number }): number
    }
    
    interface B {
        (x: { s: string }): string
        (x: { n: number }): number
    }
    
    interface C {
        (x: { n: number }): number
        (x: { s: string }): string
    }
    
    var v: A;
    var v: B;
    
    v({ s: "", n: 0 }).toLowerCase();
        ~~~~~
!!! error TS2345: Argument of type '{ s: string; n: number; }' is not assignable to parameter of type '{ n: number; }'.
!!! error TS2345:   Object literal may only specify known properties, and 's' does not exist in type '{ n: number; }'.
                       ~~~~~~~~~~~
!!! error TS2339: Property 'toLowerCase' does not exist on type 'number'.
    
    var w: A;
    var w: C;
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'w' must be of type 'A', but here has type 'C'.
    
    w({ s: "", n: 0 }).toLowerCase();
        ~~~~~
!!! error TS2345: Argument of type '{ s: string; n: number; }' is not assignable to parameter of type '{ n: number; }'.
!!! error TS2345:   Object literal may only specify known properties, and 's' does not exist in type '{ n: number; }'.
                       ~~~~~~~~~~~
!!! error TS2339: Property 'toLowerCase' does not exist on type 'number'.